--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Song Drum Machine</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Metal+Mania&family=Orbitron:wght@700&family=Press+Start+2P&family=Roboto&family=Special+Elite&family=VT323&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Almendra+SC&family=Bangers&family=Bruno+Ace+SC&family=Bungee&family=Creepster&family=Crimson+Text&family=Cutive+Mono&family=Geostar+Fill&family=IM+Fell+English&family=Inter&family=Metal+Mania&family=Metamorphous&family=Monoton&family=Orbitron:wght@700&family=Patrick+Hand&family=Press+Start+2P&family=Questrial&family=Roboto&family=Rye&family=Share+Tech+Mono&family=Special+Elite&family=Staatliches&family=UnifrakturMaguntia&family=VT323&family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
     <style>
         /* --- General & Theming --- */
         :root {
@@ -412,7 +412,7 @@
 <body>
 
     <div id="top-controls">
-        <h1>Song Drum Machine</h1>
+        <h1>SongDrumMachine Drum Sequencer</h1>
 
         <button id="toggle-mixer-btn">Show Volume & Pan</button>
         <div id="global-mix-panel" class="hidden">
